--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <h1>h1</h1>
+    <wrapper class="wrapper">
+        <div class="h1">h1</div>
+        <div class="h2">h2</div>
+        <div class="h3">h3</div>
+    </wrapper>
+    <script src="js.js"></script>
 </body>
 
 </html>
